# Commander_Wars

./: .cirrus.yml  .gitignore  .gitmodules  .travis.yml  .travis.yml.dis  CMakeLists.txt  CODE_OF_CONDUCT.md  CoW-Campaign-Ideas.txt  Commander_Wars.desktop  Doxyfile  ICON.rc  Missing COs.txt  README.md  SaveFile.txt  commander_wars.nix  core.qrc  flake.nix  general.qrc  main.cpp  mainwindow.cpp  mainwindow.h  music.qrc  sound.qrc  sprites.qrc  todo-liste.txt  travis.yml
QtCore/: qtcore-config.h
_test/: init.js  testReplay.rec
ai/: aiprocesspipe.cpp  aiprocesspipe.h  capturebuildingselector.cpp  capturebuildingselector.h  coreai.cpp  coreai.h  coreai_predefinedai.cpp  decisionnode.cpp  decisionnode.h  decisionquestion.cpp  decisionquestion.h  decisiontree.cpp  decisiontree.h  dummyai.cpp  dummyai.h  heavyai.cpp  heavyai.h  heavyaiactionscorecalculator.cpp  heavyaiactionscorecalculator.h  influencefrontmap.cpp  influencefrontmap.h  islandmap.cpp  islandmap.h  leaf.cpp  leaf.h  neuralnetwork.cpp  neuralnetwork.h  normalai.cpp  normalai.h  proxyai.cpp  proxyai.h  question.cpp  question.h  targetedunitpathfindingsystem.cpp  targetedunitpathfindingsystem.h  trainingdatagenerator.cpp  trainingdatagenerator.h  transporterselector.cpp  transporterselector.h  veryeasyai.cpp  (+1 more)
android/: AndroidManifest.xml  android_release.keystore
awbwReplayReader/: awbwactionparser.cpp  awbwactionparser.h  awbwdataparser.cpp  awbwdataparser.h  awbwdatatypes.cpp  awbwdatatypes.h  awbwmapdownloader.cpp  awbwmapdownloader.h  awbwrecordcreator.cpp  awbwrecordcreator.h  awbwreplaydownloader.cpp  awbwreplaydownloader.h  awbwreplayerreader.cpp  awbwreplayerreader.h  awbwreplayplayer.cpp  awbwreplayplayer.h  awbwreplayscandownloader.cpp  awbwreplayscandownloader.h  iAwbwAction.h
coGenerator/: coability.cpp  coability.h  cogeneratormenu.cpp  cogeneratormenu.h
coreengine/: Gamepad.h  GamepadShared.cpp  JsCallback.h  LUPDATE_MACROS.h  audiomanager.cpp  audiomanager.h  audiothread.cpp  audiothread.h  commandlineparser.cpp  commandlineparser.h  console.cpp  console.h  crashreporter.cpp  crashreporter.h  dijkstramap.cpp  dijkstramap.h  fileserializable.h  filesupport.cpp  filesupport.h  gameconsole.cpp  gameconsole.h  gameversion.cpp  gameversion.h  globalutils.cpp  globalutils.h  interpreter.cpp  interpreter.h  jsthis.cpp  jsthis.h  mainapp.cpp  mainapp.h  memorymanagement.cpp  memorymanagement.h  metatyperegister.cpp  metatyperegister.h  pathfindingsystem.cpp  pathfindingsystem.h  qmlvector.cpp  qmlvector.h  qmlvector.h~RF2b188ef.TMP  (+29 more)
customTerrainImages/: readme.txt
distribution/: build_linux_appimage.sh  commander_wars.nix
game/: GameEnums.cpp  GameEnums.h  actionperformer.cpp  actionperformer.h  battleanimation.cpp  battleanimation.h  battleanimationsprite.cpp  battleanimationsprite.h  building.cpp  building.h  campaign.cpp  campaign.h  co.cpp  co.h  createoutline.cpp  createoutline.h  cursor.cpp  cursor.h  gameaction.cpp  gameaction.h  gameanimation.cpp  gameanimation.h  gameanimationcapture.cpp  gameanimationcapture.h  gameanimationdialog.cpp  gameanimationdialog.h  gameanimationfactory.cpp  gameanimationfactory.h  gameanimationnextday.cpp  gameanimationnextday.h  gameanimationpower.cpp  gameanimationpower.h  gameanimationwalk.cpp  gameanimationwalk.h  gamemap.cpp  gamemap.h  gamerule.cpp  gamerule.h  gamerules.cpp  gamerules.h  (+29 more)
gameinput/: basegameinputif.cpp  basegameinputif.h  cursordata.cpp  cursordata.h  humanplayerinput.cpp  humanplayerinput.h  humanplayerinputmenu.cpp  humanplayerinputmenu.h  mapmover.cpp  mapmover.h  markedfielddata.cpp  markedfielddata.h  menudata.cpp  menudata.h  moveplannerinput.cpp  moveplannerinput.h
ingamescriptsupport/: campaigneditor.cpp  campaigneditor.h  genericbox.cpp  genericbox.h  scriptcondition.cpp  scriptcondition.h  scriptconditioneachday.cpp  scriptconditioneachday.h  scriptconditionstartofturn.cpp  scriptconditionstartofturn.h  scriptconditionunitdestroyed.cpp  scriptconditionunitdestroyed.h  scriptconditionvictory.cpp  scriptconditionvictory.h  scriptdata.cpp  scriptdata.h  scriptdialogdialog.cpp  scriptdialogdialog.h  scripteditor.cpp  scripteditor.h  scriptevent.cpp  scriptevent.h  scripteventdefeatplayer.cpp  scripteventdefeatplayer.h  scripteventdialog.cpp  scripteventdialog.h  scripteventspawnunit.cpp  scripteventspawnunit.h
maps/: advance_wars_2_campaign.jsm  advance_wars_campaign.jsm  advance_wars_days_of_ruin.jsm  commander_wars.jsm  readme.txt  tutorial.jsm  war_room.jsm
mapsupport/: importawbyweb_text.cpp  importcowtxt.cpp  importexport_awdc.cpp  importexport_awds.cpp  mapfilter.cpp  mapfilter.h  randomMap.cpp  randomMapGenerator.cpp  randomMapGenerator.h  refactorMap.cpp
menue/: achievementmenu.cpp  achievementmenu.h  basegamemenu.cpp  basegamemenu.h  basemenu.cpp  basemenu.h  campaignmenu.cpp  campaignmenu.h  costylemenu.cpp  costylemenu.h  creditsmenue.cpp  creditsmenue.h  editormenue.cpp  editormenue.h  gamemenue.cpp  gamemenue.h  generatormenu.cpp  generatormenu.h  ingamemenue.cpp  ingamemenue.h  mainwindow.cpp  mainwindow.h  mapselectionmapsmenue.cpp  mapselectionmapsmenue.h  movementplanner.cpp  movementplanner.h  optionmenue.cpp  optionmenue.h  replaymenu.cpp  replaymenu.h  shopmenu.cpp  shopmenu.h  victorymenue.cpp  victorymenue.h  wikimenu.cpp  wikimenu.h
modding/: csvtableimporter.cpp  csvtableimporter.h
multiplayer/: dialogAutoMatches.cpp  dialogAutoMatches.h  dialogcostatsinfo.cpp  dialogcostatsinfo.h  dialogotherlobbyinfo.cpp  dialogotherlobbyinfo.h  dialogpassword.cpp  dialogpassword.h  dialogpasswordandadress.cpp  dialogpasswordandadress.h  dialogselectdownloadmap.cpp  dialogselectdownloadmap.h  dialogselectdownloadrecord.cpp  dialogselectdownloadrecord.h  gamedata.cpp  gamedata.h  gameserver.cpp  gameserver.h  hashing.cpp  hashing.h  lobbymenu.cpp  lobbymenu.h  multiplayermenu.cpp  multiplayermenu.h  networkcommands.h  networkgamedataview.cpp  networkgamedataview.h  password.cpp  password.h
network/: JsonKeys.h  NetworkInterface.h  aNetworkInterface.h  automatchmaker.cpp  automatchmaker.h  filepeer.cpp  filepeer.h  (+41 more)
(+3168 files in other folders)
